--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,8 @@
         <strong><nav>
             <ul class="menu">
                 <li><a href="{{url_for('home')}}">Home</a></li>
-                 <li><a href="{{url_for('about')}}">About</a></li>
+                <li><a href="{{url_for('finance_graph')}}">Finance Graph</a></li>
+                <li><a href="{{url_for('about')}}">About</a></li>
             </ul>
         </nav></strong>
     </div>
