--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
             <ul class="menu">
                 <li><a href="{{url_for('home')}}">Home</a></li>
                 <li><a href="{{url_for('finance_graph')}}">Finance Graph</a></li>
+                <li><a href="{{url_for('user_height')}}">User Height</a></li>
                 <li><a href="{{url_for('about')}}">About</a></li>
             </ul>
         </nav></strong>
